--- a/Aunar/app/src/main/res/layout/activity_login.xml
+++ b/Aunar/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText3"
+            android:id="@+id/user"
             android:layout_gravity="center_horizontal"
             android:hint="@string/correo"/>
 
