--- a/Aunar/app/src/main/res/values/themes.xml
+++ b/Aunar/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
     <style name="MyActionBar"
         parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@drawable/espacio</item>
-
+        <item name="android:textColor">#000000</item>
         <!-- Support library compatibility -->
         <item name="background">@drawable/espacio</item>
     </style>
